...
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/metric_prompt"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/metricSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:entries="@array/metric"
            android:visibility="visible" />

    </RelativeLayout>


    <EditText
        android:id="@+id/cent_height"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="Centimeters"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:visibility="visible" />
...
    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ft_height"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:hint="Feet"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:visibility="gone" />

        <EditText
            android:id="@+id/inch_height"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:hint="Inches"
            android:imeOptions="actionDone"
            android:inputType="number"
...
    <!--android:id="@+id/relativeLayout1"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->


    <Button
        android:id="@+id/posBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/confirm" />

    <!--<Button-->
...
