<resources>
    <string name="app_name">Team4-PersonalBest</string>
    <string name="startBtnStr">Start Recording</string>
    <string name="endBtnStr">End Recording</string>
    <string name="heightPrompt">Please Enter Your Height</string>
    <string name="stepPrompt">Please Enter Steps Taken</string>
    <string name="confirm">Done</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="metric_prompt">Select a metric:</string>
    <string-array name="metric">
        <item>cm</item>
        <item>ft</item>
    </string-array>
    <string name="invalidHeight">Invalid height. Please enter again.</string>
    <string name="invalidStep">Steps must be between 0(exclusive) and 10000(inclusive)</string>
    <string name="displaySteps">Steps Taken</string>
    <string name="displayGoal">Current Goal</string>
    <string name="setGoalPrompt">Set a New Step Goal</string>
    <string name="congratsPrompt">Congratulations!</string>
    <string name="newGoalPrompt">Set your new goal!</string>
...
    <string name="progressLeft">Steps Left</string>
    <string name="prevSession">Active Data</string>
    <string name="user_profile">User Profile</string>
    <string name="choose_stats">Choose Stats</string>
    <string name="chat">Chat</string>
    <string name="stats">Stats</string>
    <string name="OK">OK</string>
    <string name="time_elapsed">time elapsed</string>
    <string name="speed">speed</string>
    <string name="distance">distance</string>
    <string name="graphText">Tap on blue bar: display stats for active sessions of the day.\n\n\t\tTap on red bar: display stats from the rest of the day.</string>
    <string name="launchWeeklyStatsFailure">launchWeeklyStats fail:</string>
    <string name="launchWeeklyStatsSuccess">launchWeeklyStats success</string>
...
