...

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textSteps"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/steps_will_be_shown_here"
                android:textSize="24sp"
...

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnEndRecord"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/end_btn_background"
        android:text="@string/endBtnStr" />

...
