...

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/startBtn"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:background="@drawable/start_btn_background"
                android:fontFamily="@font/armata"
                android:text="@string/startBtnStr"
...
